# TP_Summary_Portable

./: .gitignore  TP Query.spec  analysis.py  api.py  base_app.py  chain_window.py  config.py  database.py  llm_providers.py  prompt_chain_db.py  prompt_chain_executor.py  pyproject.toml  requirements.txt  settings_window.py  sigv4_util.py  tp_query.py  windows.py
build_tools/: build_portable.ps1  pyi_rth_portable_tkinter.py
build_tools/portable-test/TP Query/: tp_cache.db-shm  tp_cache.db-wal
build_tools/python-3.12.10-nuget/: .signature.p7s  [Content_Types].xml  python.nuspec
build_tools/python-3.12.10-nuget/_rels/: .rels
